<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabata Rhythm Timer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_workout_progress">Workout progress</string>
    <string name="main_default_section_text">SECTION 1 of 1</string>
    <string name="main_default_current_round_timer_text">00:00.0</string>
    <string name="main_default_workout_type">WORK</string>
    <string name="main_default_round_counter_text">ROUND 1 of 1</string>
    <string name="main_default_total_remaining_text">00:00:00</string>

    <string name="form_workout_name_label">WORKOUT NAME</string>
    <string name="form_workout_description_label">DESCRIPTION</string>
    <string name="form_workout_sections_label">SECTIONS</string>
    <string name="form_workout_total_time_label">TOTAL TIME</string>
    <string name="form_workout_add_new_section">+</string>
    <string name="form_workout_new_action_text">CREATE NEW WORKOUT</string>
    <string name="form_workout_edit_action_text">EDIT WORKOUT</string>

    <string name="form_section_total_time_label">Total time</string>
    <string name="form_section_new_action_text">CREATE NEW SECTION</string>
    <string name="form_section_edit_action_text">EDIT SECTION</string>
    <string name="form_section_warm_up_label">WARM UP</string>
    <string name="form_section_round_count_label">ROUNDS</string>
    <string name="form_section_work_label">WORK</string>
    <string name="form_section_rest_label">REST</string>
    <string name="form_section_cool_down_label">COOL DOWN</string>
    <string name="form_section_default_time_value">00:00</string>
    <string name="form_section_default_long_time_value">00:00:00</string>
    <string name="form_section_default_round_value">0</string>
    <string name="form_section_picker_divider">:</string>

    <string name="load_workout_header_label">LOAD WORKOUT</string>

    <string name="notification_press_again_to_exit">"Press the back button once again to exit.</string>
    <string name="notification_cant_delete_last_workout">"Can't delete last workout.</string>
    <string name="notification_long_press_to_delete_workout">"Long press on a workout to delete.</string>
    <string name="notification_long_press_to_delete_section">"Long press on a section to delete.</string>
    <string name="notification_hold_to_reset">"Hold to reset.</string>

    <string name="dialog_delete_workout_title">Delete workout</string>
    <string name="dialog_delete_workout_message">Are you sure you want to delete this workout?</string>

    <string name="dialog_delete_workout_section_title">Delete workout section</string>
    <string name="dialog_delete_workout_section_message">Are you sure you want to delete this workout section?</string>

    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>

    <string-array name="main_menu_items">
        <item>EDIT</item>
        <item>LOAD</item>
        <item>NEW</item>
    </string-array>

    <integer name="database_version">1</integer>
    <string name="database_name">tabatarhytm.db</string>

</resources>
